--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,6 @@ description-file = README.md
 
 [options.entry_points]
 console_scripts =
-    kalpa= kalpa_distribuidoras.scripts.cli:get_data
-    kalpa_set_credenciales= kalpa_distribuidoras.scripts.cli:set_credenciales
+    kwhmeter= kwhmeter.scripts.cli:get_data
+    kwhmeter_set_credenciales= kwhmeter.scripts.cli:set_credenciales
       
